--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,11 +15,30 @@ body {
 .main {
   &__picture {
     padding-top: 40px;
+    width: 100%;
 
+    @include on-tablet {
+      padding-top: 48px;
+    }
+
+    @include on-desktop {
+      padding-top: 104px;
+    }
   }
 
   &__playbill {
     padding-top: 20px;
+
+    @include on-tablet {
+      padding-top: 40px;
+    }
+
+    @include on-desktop {
+      padding-top: 104px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 
   &__date {
@@ -29,11 +48,17 @@ body {
   }
 
   &__name {
+    padding-bottom: 10px;
+
     &::after {
       content: '';
       width: 10px;
       height: 10px;
       background-color: $color-point;
+    }
+
+    @include on-tablet {
+      padding-bottom: 15px;
     }
   }
 
@@ -42,6 +67,20 @@ body {
     font-size: 16px;
     line-height: 24px;
     color: $color-dark-gray;
+
+    @include on-tablet {
+      max-width: 460px;
+      padding-bottom: 16px;
+    }
+  }
+
+  &__exhibion {
+    padding-bottom: 10px;
+
+    @include on-tablet {
+      max-width: 220px;
+      padding-bottom: 30px;
+    }
   }
 
   &__lection {
@@ -53,7 +92,19 @@ body {
     background-position: center;
     background-size: cover;
     height: 210px;
-    margin-bottom: 130px;
+    margin-bottom: 183px;
+    align-items: center;
+
+
+    @include on-tablet {
+      height: 390px;
+      margin: 98px 34px 208px;
+    }
+
+    @include on-desktop {
+      height: 550px;
+      margin: 104px 0 302px;
+    }
   }
 
   &__box {
@@ -63,14 +114,30 @@ body {
     text-align: center;
     transform: translateY(50%);
     box-shadow: 0 2px 0 0 $shadow-color;
+    padding: 20px 0;
+
+    @include on-tablet {
+      padding: 45px 55px 50px;
+      margin: 0 30px;
+      text-align: left;
+    }
+
+    @include on-desktop {
+      padding: 45px 100px 50px;
+      width: 370px;
+    }
   }
 
   &__content {
-    padding: 20px;
-  }
+    padding: 0 21px 20px;
 
-  &__gallery {
-    padding-bottom: 50px;
+    @include on-tablet {
+      padding: 0 0 23px;
+    }
+
+    @include on-desktop {
+      width: 380px;
+    }
   }
 
   &__registration {
@@ -83,6 +150,24 @@ body {
     text-align: center;
     padding: 88px 0;
     margin-bottom: 50px;
+
+    @include on-tablet {
+      padding: 82px 0;
+      align-items: center;
+    }
+
+    @include on-desktop {
+      padding: 163px 0;
+    }
+  }
+
+  &__subscription {
+    padding-bottom: 20px;
+
+
+    @include on-tablet {
+    padding-bottom: 16px;
+    }
   }
 
   &__events {
@@ -91,24 +176,74 @@ body {
     font-weight: 400;
     line-height: 18px;
     padding-bottom: 50px;
+
+    @include on-tablet {
+      padding-bottom: 64px;
+    }
+
+      @include on-desktop {
+        padding-bottom: 72px;
+      }
+  }
+
+  &__title {
+    padding-top: 70px;
+
+    @include on-tablet {
+      display: flex;
+      justify-content: left;
+      padding-top: 88px;
+    }
+
+    @include on-desktop {
+      padding-top: 200px;
+    }
   }
 
   &__form {
     display: flex;
     text-align: center;
-    gap: 16px;
     justify-content: space-between;
     height: 70px;
+
+    @include on-tablet {
+      gap: 16px;
+      max-width: 460px;
+    }
+
+    @include on-desktop {
+      gap: 30px;
+      max-width: 570px;
+    }
+
   }
 
   &__email {
     width: 100%;
+    transition: all $effectDuration ease;
+    padding-left: 24px;
+
+    &:hover {
+      background-color: $c-gray;
+    }
 
     &::placeholder {
-      padding-left: 24px;
       font-family: $font-montserrat;
       font-size: 14px;
       line-height: 14px;
+    }
+
+    &:focus {
+      outline: none;
+      color: $color-black;
+    }
+
+    &:focus::placeholder {
+      color: transparent;
+    }
+
+    @include on-desktop {
+      width: 470px;
     }
   }
 
@@ -118,9 +253,35 @@ body {
 
   &__network {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding-bottom: 40px;
+
+    @include on-tablet {
+      align-items:start;
+    }
+  }
+
+  &__butt {
+    display: flex;
+    justify-content: end;
+    border-bottom: solid $border-top;
+    padding-bottom: 20px;
+    width: 100%;
+    margin-bottom: 40px;
+
+    @include on-tablet {
+      height: 64px;
+      margin-bottom: 64px;
+
+    }
+
+    @include on-desktop {
+      padding-left: 35px;
+      width: 0;
+      border-bottom: none;
+      border-right: solid $border-top;
+      height: 100%;
+    }
   }
 
   &__icons {
@@ -131,20 +292,6 @@ body {
   &__arrow {
     width: 70px;
     height: 70px;
-  }
-
-  &__schedule {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
-
-  &__information {
-    font-family: $font-ibm-plex-sans;
-    font-weight: 400;
-    line-height: 19.69px;
-    display: flex;
-    flex-direction: column;
   }
 
   &__contacts {
@@ -165,11 +312,6 @@ body {
     line-height: 21px;
   }
 
-  &__butt {
-    display: flex;
-    justify-content: end;
-    padding-bottom: 20px;
-  }
 
   &__up {
     width: 50px;
@@ -177,24 +319,13 @@ body {
     border: 1px solid $color-green;
     border-radius: 50px;
     background-color: $color-white;
-  }
 
-  &__about {
-    padding: 40px 0;
-    border-top: 1px solid $border-top;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-  }
-
-  &__navigation {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    @media (min-width: 640px) {
+      display: none;
+    }
   }
 
   &__nav {
     color: $color-black;
   }
-
 }
