--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -6,7 +6,6 @@
 .name {
   display: flex;
   align-items: center;
-  padding-bottom: 10px;
   font-family: $font-montserrat;
   font-size: 28px;
   line-height: 28px;
@@ -17,24 +16,32 @@
 .exhibion {
   display: flex;
   align-items: center;
-  padding-bottom: 10px;
+  justify-content: space-between;
   font-family: $font-ibm-plex-sans;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
   color: $color-gray;
   text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 14px;
+  }
 }
 
 .title {
   display: flex;
   text-align: center;
   justify-content: center;
-  padding-top: 50px;
   font-family: $font-montserrat;
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
 }
 
 a {
@@ -42,4 +49,43 @@ a {
   font-family: $font-ibm-plex-sans;
   font-size: 14px;
   font-weight: 400;
+}
+
+.information {
+  font-family: $font-ibm-plex-sans;
+  font-weight: 400;
+  line-height: 19.69px;
+  display: flex;
+  flex-direction: column;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.img {
+  transition: transform $effectDuration ease;
+  cursor: pointer;
+
+  &:hover {
+    transform: $FotoTransform;
+  }
+}
+
+.nav {
+  transition: transform $effectDuration ease;
+  cursor: pointer;
+
+  &:hover {
+    transform: $NavTransform;
+  }
 }
