--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -11,3 +11,8 @@ $color-point: #F14A27;
 $color-white: #FFF;
 $shadow-color: #1A5A4C40;
 $border-top: #1A5A4C80;
+$color-white-border: #FFFFFF80;
+$FotoTransform: scale(1.05);
+$NavTransform: scale(1.1);
+$effectDuration: 0.5s;
+$allEffectDuration: all 0.5s ease;
