--- a/src/styles/utils/footer.scss
+++ b/src/styles/utils/footer.scss
@@ -5,6 +5,11 @@
   gap: 10px;
   padding: 40px 0;
 
+  @include on-tablet {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
   &__text {
     font-family: $font-ibm-plex-sans;
     font-size: 12px;
