--- a/src/styles/utils/top-bar.scss
+++ b/src/styles/utils/top-bar.scss
@@ -1,5 +1,7 @@
 .top-bar {
   display: flex;
+
+  position: relative;
   gap: 90px;
   align-items: center;
 
@@ -20,5 +22,8 @@
     background-size: cover;
     background-position: center;
 
+    @include on-tablet {
+      display: none;
+    }
   }
 }
