--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -3,7 +3,8 @@
 
   &__content {
     text-align: center;
-    
+    display: flex;
+
     @include page-grid;
   }
 
@@ -18,7 +19,17 @@
     grid-column: 1/-1;
 
     @include on-tablet {
+      order: 2;
       grid-column: -1/4;
+      padding-top: 15px;
+      width: 100%;
+      height: 100%;
+    }
+
+    @include on-desktop {
+      grid-column: -1/6;
+
+      height: 655px;
 
     }
   }
@@ -27,8 +38,12 @@
     grid-column: 1/-1;
 
     @include on-tablet {
-      grid-column: 1/4;
+      order: 1;
+      grid-column: 1/-4;
+    }
 
+    @include on-desktop {
+      grid-column: 1/6;
     }
   }
 
@@ -38,6 +53,20 @@
     font-size: 45px;
     font-weight: 700;
     line-height: 45px;
+
+    @include on-tablet {
+      padding: 64px 0 38px;
+      text-align: left;
+      font-size: 54px;
+      font-weight: 700;
+      line-height: 64.8px;
+    }
+
+    @include on-desktop {
+      padding: 143px 0 89px;
+      font-size: 72px;
+      line-height: 86.4px;
+    }
   }
 
   &__button {
@@ -48,6 +77,51 @@
     width: 100%;
     align-items: center;
     border: 1px solid $color-green;
+    background-color: $color-white;
     cursor: pointer;
+
+    @include on-tablet {
+      width: 270px;
+    }
+  }
+
+  &__tickets {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 0 20px;
+
+    @include on-tablet {
+      justify-content: left;
+      padding: 0 34px;
+    }
+
+    @include on-desktop {
+      justify-content: right;
+      padding: 0;
+    }
+  }
+
+  &__arrow {
+    @include on-tablet {
+      height: 70px;
+    }
   }
 }
+
+.bottom {
+  &__icon {
+    background-image: url(../images/Vector.svg);
+    width: 18px;
+    height: 12px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    margin-top: 40px;
+
+    @media (max-width: 640px) {
+      display: none;
+    }
+  }
+}
+
