--- a/src/styles/utils/gallery.scss
+++ b/src/styles/utils/gallery.scss
@@ -2,59 +2,59 @@
   display: grid;
   padding-bottom: 100px;
 
-  @include on-tablet {
-    padding-bottom: 92px;
-  }
+//   @include on-tablet {
+//     padding-bottom: 92px;
+//   }
 
-  @include on-desktop {
-    padding-bottom: 170px;
-  }
+//   @include on-desktop {
+//     padding-bottom: 170px;
+//   }
 
-  &__pictures {
-    @include page-grid;
-  }
+//   &__pictures {
+//     @include page-grid;
+//   }
 
-  &__title {
-    padding-bottom: 40px;
-    grid-column: 1/-1;
+//   &__title {
+//     padding-bottom: 40px;
+//     grid-column: 1/-1;
 
-    @include on-tablet {
-      display: flex;
-      justify-content: left;
-      padding-bottom: 48px;
-    }
- }
+//     @include on-tablet {
+//       display: flex;
+//       justify-content: left;
+//       padding-bottom: 48px;
+//     }
+//  }
 
- &__picture {
-  @include on-desktop {
-    padding-bottom: 30px;
-  }
+//  &__picture {
+//   @include on-desktop {
+//     padding-bottom: 30px;
+//   }
 
-    &--1 {
-      @include on-desktop {
-        grid-column: 1/5;
-      }
-    }
+//     &--1 {
+//       @include on-desktop {
+//         grid-column: 1/5;
+//       }
+//     }
 
-    &--2 {
-      @include on-desktop {
-        grid-column: 5/-1;
-      }
-    }
+//     &--2 {
+//       @include on-desktop {
+//         grid-column: 5/-1;
+//       }
+//     }
 
-    &--3 {
-      @include on-desktop {
-        grid-column: 1/9;
-        }
-    }
+//     &--3 {
+//       @include on-desktop {
+//         grid-column: 1/9;
+//         }
+//     }
 
-    &--4 {
-      @include on-desktop {
-        grid-column: 9/-1;
-        }
-    }
+//     &--4 {
+//       @include on-desktop {
+//         grid-column: 9/-1;
+//         }
+//     }
 
-  }
+//   }
 
   &__img {
     width: 100%;
