add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/page';
+@import 'blocks/container';
+@import 'blocks/icons';
+@import 'blocks/main-content';
+@import 'blocks/events';
+@import 'blocks/gallery';
+@import 'blocks/carousel';
+@import 'blocks/subscription-cta';
+@import 'blocks/footer-content';
+@import 'blocks/nav';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/schedule';
 
 body {
-  background: $c-gray;
+  background: $background-color;
 }
