--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,95 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+  color: #000;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 64.8px;
+    text-align: left;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86.4px;
+  }
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  color: #0f0e08;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: left;
+  }
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 28px;
+  line-height: 28px;
   font-weight: 400;
+  text-align: left;
+  color: #0f0e08;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: left;
+  }
+}
+
+%h4 {
+  font-family: IBMPlexSans, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  text-align: left;
+  color: #687480;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
+%h5 {
+  font-family: IBMPlexSans, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #1a5a4c;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 21px;
+  }
+}
+
+%p {
+  font-family: IBMPlexSans, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  text-align: left;
+  color: $main-text-color;
+  margin: 0;
+}
+
+%a {
+  text-decoration: none;
 }
