--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$max-mobile-width: 320px;
+$min-tablet-width: 640px;
+$min-desktop-width: 1280px;
+$min-design-width: 1440px;
+$animation-duration: 0.6s;
+$background-color: #fff;
+$green-pea: #1a5a4c;
+$category-text-color: #687480;
+$main-text-color: #4e4e4e;
+$menu-text-color: #fff;
+$footer-text-color: #0f0e08;
+$page-padding-inline-mobile: 20px;
+$page-padding-inline-tablet: 34px;
+$page-padding-inline-desktop: 55px;
