--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,53 @@
 @font-face {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: Montserrat, sans-serif;
+  src:
+    url('../fonts/Montserrat-Regular.woff') format('woff'),
+    url('../fonts/Montserrat-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat, sans-serif;
+  src:
+    url('../fonts/Montserrat-Bold.woff') format('woff'),
+    url('../fonts/Montserrat-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: IBMPlexSans, sans-serif;
+  src:
+    url('../fonts/IBMPlexSans-Light.woff') format('woff'),
+    url('../fonts/IBMPlexSans-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: IBMPlexSans, sans-serif;
+  src:
+    url('../fonts/IBMPlexSans-Regular.woff') format('woff'),
+    url('../fonts/IBMPlexSans-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: IBMPlexSans, sans-serif;
+  src:
+    url('../fonts/Montserrat-Medium.woff') format('woff'),
+    url('../fonts/Montserrat-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: IBMPlexSans, sans-serif;
+  src:
+    url('../fonts/IBMPlexSans-Bold.woff') format('woff'),
+    url('../fonts/IBMPlexSans-Bold.woff2') format('woff2');
+  font-weight: 700;
   font-style: normal;
 }
