--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/icons';
+@import 'blocks/hero';
+@import 'blocks/aside';
 
 body {
-  background: $c-gray;
+  background: #fff;
 }
