--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -12,11 +12,12 @@
   left: 0;
   right: 0;
   transform: translateY(-100%);
+  z-index: 2;
+  color: $text-light-color;
 
   &__top {
     padding: 27px 0;
     background-color: $accent-color;
-    height: 300px;
 
     @include on-tablet {
       padding: 40px 0;
@@ -25,7 +26,8 @@
   }
 
   &__nav {
-    margin-bottom: 2.5rem;
+    display: flex;
+    gap: 38px;
   }
 }
 
