--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -9,6 +9,7 @@
   &--menu {
     position: absolute;
     top: 27px;
+    z-index: 1;
     background-image: url('../images/icons/icon-menu.svg');
 
     @include on-tablet {
