--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,15 @@
 @import 'utils';
+@import 'blocks/button';
 @import 'blocks/page';
 @import 'blocks/header';
 @import 'blocks/menu';
 @import 'blocks/icons';
 @import 'blocks/hero';
 @import 'blocks/aside';
+@import 'blocks/section-title';
+@import 'blocks/events';
+@import 'blocks/event';
+@import 'blocks/footer';
 
 body {
   background: #fff;
