--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,25 @@
 @import 'fonts';
 @import 'typography';
 
-body {
-  background: $c-gray;
+.container {
+  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  margin-inline: auto;
+  padding-inline: var(--container-padding-x)
+}
+
+.visually-hidden {
+  @include visually-hidden;
+}
+
+
+.hidden-mobile {
+  @include mobile {
+    display: none !important;
+  }
+}
+
+.visible-mobile {
+  @include mobile-above {
+    display: none !important;
+  }
 }
