--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,17 +1,17 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+// @mixin hover($_property, $_toValue) {
+//   transition: #{$_property} 0.3s;
 
-  &:hover {
-    #{$_property}: $_toValue;
-  }
-}
+//   &:hover {
+//     #{$_property}: $_toValue;
+//   }
+// }
 
 @mixin grid-template {
   --gridColumns: 12;
 
   display: grid;
   grid-template-columns: repeat(var(--gridColumns), 1fr);
-  gap: 40px;
+  gap: 30px;
 
   @include mobile {
     gap: 30px;
