--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,8 @@
 @import 'fonts';
 @import 'typography';
 
-.container {
-  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
-  margin-inline: auto;
-  padding-inline: var(--container-padding-x)
-}
+@import 'blocks/header';
+
 
 .visually-hidden {
   @include visually-hidden;
