--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,24 +1,22 @@
 :root {
-  --color-dark: #191a23;
-  --color-dark-alt: #292a32;
-  --color-light: #ffffff;
+  --color-dark: #000000;
+  --color-dark-alt: #0F0E08;
+  --color-green: #1A5A4C;
   --color-accent: #b9ff66;
-  --color-gray: #f3f3f3;
-  --color-gray-alt: #898989;
+  --color-gray: #4E4E4E;
+  --color-gray-alt: #687480;
+  --color-orange: #F14A27;
 
   --border: 1px solid var(--color-dark);
-  --border-radius: 14px;
-  --border-radius-small: 7px;
-  --border-radius-large: 45px;
 
-  --shadow: 0 5px 0 0 var(--color-dark);
+  --font-family-base: "IBM Plex Sans", sans-serif;
+  --font-family-second: "Montserrat", sans-serif;
 
-  --font-family-base: "Space Grotesk", sans-serif;
+  --container-width: 1170px;
+  --container-padding-x: 55px;
 
-  --container-width: 1240px;
-  --container-padding-x: 20px;
-
-  --section-padding-y: 70px;
+  // --section-padding-y: 70px;
+  // --shadow: 0 5px 0 0 var(--color-dark);
 
   --input-height: 59px;
   --button-height: 68px;
