finished header with menu

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -25,9 +25,33 @@
     }
   }
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    @include on-tablet {
+      flex-direction: row;
+    }
+  }
+
   &__nav {
     display: flex;
-    gap: 38px;
+    gap: 28px;
+    border-bottom: 1px solid rgba(255,255,255,0.5);
+    padding-bottom: 24px;
+
+    @include on-tablet {
+      gap: 38px;
+      border-bottom: 0;
+      border-right: 1px solid rgba(255,255,255,0.5);
+      padding-right: 38px;
+    }
+
+    @include on-desktop {
+      gap: 102px;
+      padding-right: 102px;
+    }
   }
 }
 
