--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,8 +1,20 @@
 .menu {
 
   &__list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  &__link {
+    font-size: 1rem;
+    line-height: 1rem;
+    font-weight: 500;
+
+    @include on-desktop {
+      font-size: 22px;
+      line-height: 22px;
+    }
   }
 
 }
