--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'blocks/icons';
 @import 'blocks/hero';
 @import 'blocks/aside';
+@import 'blocks/schedule';
 @import 'blocks/section-title';
 @import 'blocks/events';
 @import 'blocks/event';
