started footer, mobile ready

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,3 +1,102 @@
 .footer {
-  height: 120px;
+  padding-block: 50px;
+
+  &__top {
+    font-size: 14px;
+    line-height: 21px;
+
+    @include page-grid;
+  }
+
+  &__logo-social {
+    grid-column: 1 / -1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+
+    @include on-tablet {
+      grid-column: 1 / 2;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 62px;
+    }
+  }
+
+  &__schedule {
+    grid-column: 1 / 2;
+    padding-inline: 0;
+    padding-top: 0;
+    padding-bottom: 70px;
+
+    @include on-tablet {
+      grid-column: 2 / 4;
+    }
+
+    @include on-desktop {
+      grid-column: 3 / 5;
+    }
+
+    & .schedule__content {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    & .schedule__item {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    & .schedule__time {
+      display: block;
+      white-space: nowrap;
+    }
+  }
+
+  &__address {
+    grid-column: 2 / 3;
+
+    @include on-tablet {
+      grid-column: 4 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 5 / 7;
+    }
+  }
+
+  &__menu {
+    padding-top: 40px;margin-bottom: 80px;
+    border-top: rgba(26, 90, 76, 0.5) 1px solid;
+    grid-column: 1 / -1;
+
+    & .menu__link {
+      font-size: 14px;
+      font-weight: 400;
+    }
+
+    @include on-tablet {
+      grid-column: 2 / 5;
+    }
+
+    @include on-desktop {
+      grid-column: 8 / 10;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    font-size: 12px;
+    line-height: 17px;
+    font-weight: 300;
+
+    @include on-tablet {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
 }
