--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'blocks/events';
 @import 'blocks/event';
 @import 'blocks/footer';
+@import 'blocks/social';
 
 body {
   background: #fff;
