--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -53,6 +53,7 @@
       display: block;
       white-space: nowrap;
     }
+
   }
 
   &__address {
@@ -68,8 +69,8 @@
   }
 
   &__menu {
-    padding-top: 40px;margin-bottom: 80px;
-    border-top: rgba(26, 90, 76, 0.5) 1px solid;
+    padding-top: 40px;
+    margin-bottom: 80px;
     grid-column: 1 / -1;
 
     & .menu__link {
@@ -79,10 +80,30 @@
 
     @include on-tablet {
       grid-column: 2 / 5;
+      border-top: 0;
+      padding-top: 65px;
     }
 
     @include on-desktop {
-      grid-column: 8 / 10;
+      grid-column: 8 / 11;
+      padding-top: 0;
+    }
+  }
+
+  &__divider {
+    height: 1px;
+    grid-column: 1 / -1;
+    background-color: rgba(26, 90, 76, 0.5);
+
+    @include on-tablet {
+      grid-column: 2 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 7 / 8;
+      width: 1px;
+      height: 260px;
+      margin: 0 auto;
     }
   }
 
