add events block

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -4,4 +4,10 @@
   @include on-tablet {
     padding-top: 88px;
   }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 64px;
+  }
 }
