--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,14 +1,100 @@
 .event {
+  @include page-grid;
+
+  align-items: center;
+  row-gap: 20px;
 
   &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    grid-column: 1/-1;
+
+    @include on-desktop {
+      grid-column: 1/8;
+    }
+  }
+
+  &__info {
+    grid-column: 1/-1;
+
+    @include on-desktop {
+      grid-column: 9/-1;
+
+    }
   }
 
   &__meta {
     display: flex;
-    justify-content: space-between ;
-    padding: 20px 0 15px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+
+    @include on-tablet {
+      justify-content: flex-start;
+      gap: 30px;
+    }
+  }
+
+  &__type {
+    line-height: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: $text-subheaders-color;
+
+    @include on-tablet {
+     font-size: 14px;
+     line-height: 14px;
+    }
+  }
+
+  &__date {
+    color: $accent-color;
+    line-height: 24px;
+    font-weight: 700;
+
+    @include on-tablet {
+      font-size: 14px;
+      line-height: 21px;
+     }
+  }
+
+  &__title {
+    position: relative;
+    display: inline-block;
+    font-size: 28px;
+    line-height: 28px;
+    font-weight: 400;
+    margin-bottom: 10px;
+
+    @include on-tablet {
+      font-size: 36px;
+      line-height: 36px;
+      margin-bottom: 15px;
+     }
+
+    &::after {
+      position: absolute;
+      right: -20px;
+      top: 50%;
+      transform: translateY(-50%);
+      content: '';
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background-color: $accent2-color;
+
+      @include on-tablet {
+        width: 15px;
+        height: 15px;
+        right: -30px;
+       }
+    }
+  }
+
+  &__descr {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 300;
   }
 }
