--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,8 +1,14 @@
 .events {
   padding-top: 70px;
+  padding-bottom: 60px;
 
   @include on-tablet {
     padding-top: 88px;
+    padding-bottom: 112px;
+  }
+
+  @include on-desktop {
+    padding-bottom: 104px;
   }
 
   &__list {
