--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'blocks/section-title';
 @import 'blocks/events';
 @import 'blocks/event';
+@import 'blocks/announcement';
 @import 'blocks/footer';
 @import 'blocks/social';
 
