add desktop gallery

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'blocks/event';
 @import 'blocks/announcement';
 @import 'blocks/subscription';
+@import 'blocks/gallery';
 @import 'blocks/footer';
 @import 'blocks/social';
 
