--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -30,10 +30,6 @@
     margin-inline: auto;
   }
 
-  // @include on-large-desktop {
-  //   max-width: 1140px;
-  //   margin-inline: auto;
-  // }
 }
 
 .container {
@@ -56,15 +52,12 @@
   @include on-desktop {
     --columns: 12;
   }
-
-  @include on-large-desktop {
-    --columns: 12;
-  }
 }
 
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
+@mixin gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 60px);
+  gap: 30px;
 }
+
