--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,34 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/container';
+@import './blocks/header';
+@import './blocks/icon';
+@import './blocks/event';
+@import './blocks/lection';
+@import './blocks/gallery';
 
 body {
-  background: $c-gray;
+  font-family: $main-font;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 450px;
+}
+.swiper-slide {
+  width: 100%;
+  @include onTablet {
+    width: 50%;
+  }
+}
+.swiper-img {
+  width: 100%;
+  height: 410px;
+
+  @include onTablet {
+    width: 50%;
+  }
 }
