--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+
+$desktop-min-width: 1280px;
+
+$main-font: 'Montserrat', sans-serif;
+$second-font: 'IBM Plex Sans', sans-serif;
