--- a/src/styles/utils/_globals.scss
+++ b/src/styles/utils/_globals.scss
@@ -5,10 +5,42 @@ body {
   font-weight: 400;
   line-height: 1.28;
   color: var(--color-dark);
+  background-color: var(--color-gray-light);
 }
 
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
-  padding-inline: var(--container-padding-x)
+  padding-inline: var(--container-padding-x);
+
+  @mixin tablet{
+    --container-padding-x: 39px
+  }
+}
+
+.button {
+  position: relative;
+  height: 100%;
+  aspect-ratio: 1;
+  border: none;
+}
+
+.button--color-green {
+  background-color: var(--color-green);
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    background: url(../images/icons/arrow.svg) center/contain no-repeat;
+    width: 7px;
+    height: 12px;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
