--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -6,6 +6,7 @@
 //   }
 // }
 
+
 @mixin grid-template {
   --gridColumns: 12;
 
@@ -13,8 +14,15 @@
   grid-template-columns: repeat(var(--gridColumns), 1fr);
   gap: 30px;
 
-  @include mobile {
-    gap: 30px;
+  @include tablet {
+    --gridColumns: 6;
+  }
+
+
+
+  @include mobile-s {
+    --gridColumns: 2;
+    gap: 20px;
   }
 }
 
@@ -22,7 +30,9 @@
 /* ********** */
 
 @mixin fluid-text($max: 48, $min: 16) {
-  font-size: clamp(#{$min}px, #{$max / 1440 * 100}vw, #{$max}px);
+  //$maxwidthContent = 1280px
+
+  font-size: clamp(#{$min}px, #{$max / 1280 * 100}vw, #{$max}px);
 }
 
 @mixin reset-link {
