--- a/src/styles/utils/_media.scss
+++ b/src/styles/utils/_media.scss
@@ -1,11 +1,19 @@
+/*
+- The design 1440px
+- Desktop 1280px
+- Tablet 640px
+- Mobile (> 320px)
+*/
+
+
 $desktop-above: 1281px;
 $desktop: 1280px;
 
-$tablet-above: 1024px;
-$tablet: 1023px;
+$tablet-above: 639px;
+$tablet: 640px;
 
-$mobile-above: 768px;
-$mobile: 767px;
+$mobile-above: 321px;
+$mobile: 320px;
 
 $mobile-s-above: 481px;
 $mobile-s: 480px;
@@ -56,21 +64,5 @@ $mobile-s: 480px;
 @mixin mobile-s {
   @media(max-width: $mobile-s) {
     @content;
-  }
-}
-
-
-// Штука которая убирает єффект залипания (кнопки) на touch-экранах
-@mixin hover {
-  @media (hover:hover) {
-    &:hover {
-      @content;
-    }
-  }
-
-  @media(hover:none) {
-    &:active {
-      @content;
-    }
   }
 }
