--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -7,6 +7,24 @@
 // }
 
 
+
+// Штука которая убирает єффект залипания (кнопки) на touch-экранах
+@mixin hover {
+  @media (hover:hover) {
+    &:hover {
+      @content;
+    }
+  }
+
+  @media(hover:none) {
+    &:active {
+      @content;
+    }
+  }
+}
+
+
+
 @mixin grid-template {
   --gridColumns: 12;
 
