create museum landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/museum';
+@import './blocks/menu';
+@import './blocks/current-events';
+@import './blocks/gallery';
+@import './blocks/email';
+@import './blocks/footer';
