fix images add hover fix overlay

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -39,7 +39,6 @@
     @include content-padding-inline;
 
     margin-bottom: 60px;
-    overflow: hidden;
 
     @include on-tablet {
       grid-column: 1 / -1;
@@ -53,6 +52,10 @@
       gap: 130px;
       margin-bottom: 104px;
     }
+  }
+
+  &__picture {
+    overflow: hidden;
   }
 
   &__image {
