--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -164,6 +164,10 @@
   &__contacts-link {
     text-decoration: none;
     color: $main-color;
+
+    &:hover {
+      color: $decorative-color;
+    }
   }
 
   &__arrow {
