--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -37,7 +37,6 @@
     margin-left: 20px;
     display: flex;
     margin-bottom: 20px;
-    overflow: hidden;
 
     @include on-tablet {
       margin-left: 34px;
@@ -56,74 +55,98 @@
   }
 
   &__image {
-    @include hover(transform, scale(1.1));
-
-    object-fit: cover;
+    @include on-desktop {
+      overflow: hidden;
+    }
   }
 
-  &__image--1 {
-    background-image: url(../images/gallery-image-1.png);
-    width: 90%;
+  &__photo-1 {
+    width: 280px;
     height: 410px;
-    background-size: cover;
-    margin-right: 5%;
+    margin-right: 16px;
+    object-fit: cover;
 
     @include on-tablet {
-      width: 40%;
+      width: 340px;
       height: 543px;
+      margin-right: 20px;
     }
 
     @include on-desktop {
+      @include hover(transform, scale(1.1));
+
       width: 100%;
       height: 600px;
+      margin-right: 0;
+    }
+  }
+
+  &__image--1 {
+    @include on-desktop {
       grid-column: 1 / 5;
     }
   }
 
-  &__image--2 {
-    background-image: url(../images/gallery-image-2-tablet.png);
-    width: 5%;
-    height: auto;
-    background-size: cover;
+  &__photo-2 {
+    width: auto;
+    height: 410px;
+    object-fit: cover;
 
     @include on-tablet {
-      width: 40%;
+      width: auto;
       height: 543px;
-      margin-right: 5%;
+
+      // margin-right: 20px;
     }
 
     @include on-desktop {
-      background-image: url(../images/gallery-image-2.png);
+      @include hover(transform, scale(1.1));
+
       width: 100%;
       height: 600px;
-      grid-column: 5 / 13;
+    }
+  }
+
+  &__image--2 {
+    grid-column: 5 / 13;
+  }
+
+  &__photo-3 {
+    display: none;
+
+    // @include on-tablet {
+    //   display: block;
+    //   width: calc(100vh - 340px - 20px - 340px - 20px);
+    //   height: 543px;
+    // }
+
+    @include on-desktop {
+      @include hover(transform, scale(1.1));
+
+      display: block;
+      width: 100%;
+      height: 360px;
     }
   }
 
   &__image--3 {
-    @include on-tablet {
-      background-image: url(../images/gallery-image-2-tablet.png);
-      width: 10%;
-      height: 543px;
-    }
+    grid-column: 1 / 9;
+  }
+
+  &__photo-4 {
+    display: none;
 
     @include on-desktop {
-      background-image: url(../images/gallery-image-3.png);
-      grid-column: 1 / 9;
+      @include hover(transform, scale(1.1));
+
+      display: block;
       width: 100%;
       height: 360px;
-      background-size: cover;
     }
   }
 
   &__image--4 {
-    @include on-desktop {
-      background-image: url(../images/gallery-image-4.png);
-      grid-column: 9 / 13;
-      width: 100%;
-      height: 360px;
-      background-size: cover;
-    }
+    grid-column: 9 / 13;
   }
 
   &__dots {
