remove scroll fix form

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -80,8 +80,10 @@
       width: 200%;
       height: 1px;
       background-color: #1a5a4c80;
+      display: none;
 
       @include on-tablet {
+        display: block;
         bottom: -64px;
       }
 
