--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -34,9 +34,11 @@
   }
 
   &__images {
+    width: 100%;
     margin-left: 20px;
     display: flex;
     margin-bottom: 20px;
+    overflow: hidden;
 
     @include on-tablet {
       margin-left: 34px;
