remove menu scroll

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,10 @@
   scroll-behavior: smooth;
   overflow-x: hidden;
 
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__body {
     margin: 0;
     padding: 0;
